chassis/tests/failing/comp_no_return_type.stderr
error: custom attribute panicked
 --> $DIR/comp_no_return_type.rs:5:1
  |
5 | #[integration]
  | ^^^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: MissingReturnTypeInComponent
